--- a/nginx-mogilefs/nginx.conf
+++ b/nginx-mogilefs/nginx.conf
@@ -33,6 +33,17 @@ http {
 
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
+	proxy_cache_path /dev/shm levels=1:2 keys_zone=staticcache:1024m inactive=1w max_size=4g;	
 
-        include mogilefs.conf;
+	#limit_conn_zone $binary_remote_addr zone=addr:10m;
+	#limit_req_zone $binary_remote_addr zone=one:10m rate=200r/s;
+	#limit_conn addr 200;
+
+	#server {
+	#	listen 80 default;
+	#	server_name localhost 192.168.2.241;
+	#	return 444;
+	#}
+
+        include vhost/*.conf;
 }
